Adding property routing module for lazy loading

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
-<h1> HI </h1>
-
-<button type="button" class="btn btn-primary">
-  Press Me Hard
-  <span class="fa fa-user"></span>
-</button>
+<div>
+    <router-outlet></router-outlet>
+</div>
