Adding routing for components

--- a/src/app/property/property-details/property-details.component.html
+++ b/src/app/property/property-details/property-details.component.html
@@ -1,4 +1,4 @@
 <p>property-details works!</p>
-<button type="button" class="btn btn-primary" (click)="click()">
+<button type="button" class="btn btn-primary">
     Press Me Hard
 </button>
