--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,11 +1,9 @@
-<p>search works!</p>
 <section class="search-sec">
     <div class="container">
         <form [formGroup]="advancedSearchForm" (ngSubmit)="onSearch(advancedSearchForm.value)">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="row">
-
                         <div class="col-lg-5 col-md-5 col-sm-12 p-0 has-icon ">
                             <span class="fa fa-search form-control-feedback"></span>
                             <input type="text" class="form-control search-slt" placeholder="Enter Address" formControlName="address">
@@ -30,3 +28,8 @@
         </form>
     </div>
 </section>
+
+<ng-container *ngIf="(searchResult$ | async) as properties">
+    <app-property routerLink="/properties/list" [properties$]="searchResult$"></app-property>
+
+</ng-container>
