Searching by http parms

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -13,9 +13,9 @@
                         </div>
                         <div class="col-lg-3 col-md-3 col-sm-12 p-0">
                             <select class="form-control search-slt" id="exampleFormControlSelect1" formControlName="sellingType">
-                                <option selected>Select Selling Type</option>
+                                <option selected value=''>{{SELECT_FORM_SELLINGTYPE_DEFAULT_VALUE}}</option>
                                 <option>RENT</option>
-                                <option>BUY</option>
+                                <option>SELL</option>
                             </select>
                         </div>
                         <div class="col-lg-1 col-md-1 col-sm-12 p-0">
