Adding routing for details and list

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -29,6 +29,5 @@
     </div>
 </section>
 
-<ng-container *ngIf="(searchResult$ | async) as properties">
-    <app-property [properties$]="searchResult$"></app-property>
-</ng-container>
+
+<app-property [filterParams]="filterPropertyParams"></app-property>
