--- a/src/app/property/property-details/property-details.component.css
+++ b/src/app/property/property-details/property-details.component.css
@@ -1,10 +1,5 @@
 .map-container {
-    width: 500px;
-    height: 500px;
-    position: absolute;
-}
-
-mgl-map {
-    height: 100%;
-    width: 80vh;
+    width: 100%;
+    height: 450px;
+    /* position: absolute; */
 }
