--- a/src/app/property/property-details/property-details.component.html
+++ b/src/app/property/property-details/property-details.component.html
@@ -1,40 +1,18 @@
-<div id="propety" class="row">
-    <ng-container *ngIf="( property$ | async )as property">
+<ng-container *ngIf="( property$ | async )as property">
+    <div class="row">
+
+        <h4>{{property.title}}</h4>
         <div class="col col-6">
-            <h4>{{property.title}}</h4>
-            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" style="max-height:500px; max-width: 500px;">
-                <div class="carousel-inner">
-                    <ng-container *ngFor="let photo of property.photos; let i = index">
-                        <div class="carousel-item active" *ngIf='i==0'>
-                            <img class="img-responsive" [src]="photo.url" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item" *ngIf='i>0'>
-                            <img class="img-responsive" [src]="photo.url" class="d-block w-100" alt="...">
-                        </div>
-                    </ng-container>
-
-                </div>
-                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
+            <app-photos [photos]="property.photos"></app-photos>
+            <app-amenities [amenities]="property.amenities"></app-amenities>
         </div>
-        <div id="map-col" class="col col-6">
+        <div class="col col-6">
 
-            <agm-map style="height: 70vh;" [zoom]='17' [latitude]="property.address.latitude" [longitude]="property.address.longitude" [mapTypeId]='googleMapType'>
-                <agm-marker [latitude]="property.address.latitude" [longitude]="property.address.longitude">
+            <app-map [latitude]="property.address.latitude" [longitude]="property.address.longitude" [markerTitle]="property.title"> </app-map>
 
-                    <agm-info-window>
-                        <strong>{{property.title}}</strong>
-                    </agm-info-window>
 
-                </agm-marker>
-            </agm-map>
+            <app-agent [agent]="property.agent"></app-agent>
         </div>
-    </ng-container>
-</div>
+    </div>
+
+</ng-container>
