--- a/src/styles.css
+++ b/src/styles.css
@@ -8,4 +8,6 @@
     --color-top-nav: #d3d3d3;
     --color-text: dimgray;
     --color-search-number: #32CD32;
+    --color-search-background: #1A4668;
+    --color-select-text: #55595c;
 }
