--- a/src/app/property/property-details/property-details.component.html
+++ b/src/app/property/property-details/property-details.component.html
@@ -1,14 +1,15 @@
 <ng-container *ngIf="( property$ | async )as property">
+    <h4>{{property.title}}</h4>
     <div class="row">
 
-        <h4>{{property.title}}</h4>
+
         <div class="col col-6">
             <app-photos [photos]="property.photos"></app-photos>
             <app-amenities [amenities]="property.amenities"></app-amenities>
         </div>
         <div class="col col-6">
 
-            <app-map [latitude]="property.address.latitude" [longitude]="property.address.longitude" [markerTitle]="property.title"> </app-map>
+            <app-map [address]="property.address"> </app-map>
 
 
             <app-agent [agent]="property.agent"></app-agent>
